--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
+    "stripe": "^17.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
