--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
